# toner-dsp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  README.md  run.sh  wiring-table.txt
config/: FreeRTOSConfig.h
src/: blink.xc  main.xc
tools/: debug-linux.py  debug.py  fft-frame-analyzer.py  magnitude-fft-plotter.py  uart_sniffer.py
